--- a/modules/ROOT/partials/configuration/autoresize_bottom_margin.adoc
+++ b/modules/ROOT/partials/configuration/autoresize_bottom_margin.adoc
@@ -15,3 +15,24 @@ tinymce.init({
   autoresize_bottom_margin: 50
 });
 ----
+
+As of version 6.3, {productname} checks for the {productname} resize function entering a loop.
+
+If the function is detected as doing so, the document’s `+margin-bottom+` value is set to 0, instead of whatever value is assigned to `autoresize_bottom_margin`.
+
+This prevents an xref:6.3-release-notes.adoc#the-autoresize-plugin-caused-the-editor-area-to-infinitely-resize-when-content_css-was-set-to-document[infinite resizing bug from presenting].
+
+To prevent the resize function from even entering this loop, `+autoresize_bottom_margin+` must be set to a value less than any `+margin-bottom+` value set for the document.
+
+Alternatively, if `+margin-bottom+` is set by a CSS declaration, set `+autoresize_bottom_margin+` to `0`.
+
+=== Example: setting `+autoresize_bottom_margin+` to zero because `+margin-bottom+` is set elsewhere
+
+[source,js]
+----
+tinymce.init({
+  selector: 'textarea',  // change this value according to your HTML
+  plugins: 'autoresize',
+  autoresize_bottom_margin: 0
+});
+----
