DOC-1912: nav.adoc
Added Advanced Templates entry to nav.adoc.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -279,6 +279,7 @@
 *** xref:a11ychecker.adoc[Accessibility Checker]
 *** xref:advcode.adoc[Advanced Code Editor]
 *** xref:advtable.adoc[Advanced Tables]
+*** xref:advanced-templates.adoc[Advanced Templates]
 *** xref:advanced-typography.adoc[Advanced Typography]
 *** xref:casechange.adoc[Case Change]
 *** xref:checklist.adoc[Checklist]
