DOC-1912: advanced-templates.adoc
Added include to `admon-requires-6.4v.adoc`.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -9,6 +9,8 @@
 
 include::partial$misc/admon-premium-plugin.adoc[]
 
+include::partial$misc/admon-requires-6.4v.adoc[]
+
 // Add an introduction. What does the plugin do? Why would I use this plugin? Keep it concise.
 
 == Interactive example
