DOC-1912: premium-plugins.adoc
Added Advanced Templates table cell to Premium-plugins index page.

Also commented out the dummy table cell as per the in-document procedure: adding this new cell makes for an even number of cells in the table.

--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -23,6 +23,12 @@ Add advanced functionality to tables.
 
 a|
 [.lead]
+xref:advanced-templates.adoc[Advanced Templates]
+
+Create, edit, and add complex, interactive templates to {productname} documents.
+
+a|
+[.lead]
 xref:advanced-typography.adoc[Advanced Typography]
 
 Replace common typewriter-style characters with their professional typesetter equivalents.
@@ -159,7 +165,7 @@ Cloud-based file and image management for {productname}.
 //    odd.
 // 2. Prepend the inline comment markup to this element
 //    when the number of cells in the table is even.
-a|
+// a|
 
 |===
 
