DOC-1912: advanced-templates.adoc & premium-plugins.adoc
Edited description and short description in advanced-templates.adoc.

Also copied edit to premium-plugins.adoc.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -1,7 +1,7 @@
 = Advanced Template plugin
 :navtitle: Advanced Template
-:description: <What does this plugin do? What is the benefit? (One sentence description)>.
-:description_short: <Like description, but shorter (if possible)>.
+:description: Create and edit complex templates in {productname} for use with {productname}.
+:description_short: Create and edit templates.
 :keywords: plugin, advanced template, templates, advtemplate.
 :pluginname: Advanced Template
 :plugincode: advtemplate
