--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -25,7 +25,7 @@ a|
 [.lead]
 xref:advanced-templates.adoc[Advanced Templates]
 
-Create, edit, and add complex, interactive templates to {productname} documents.
+Create and edit complex templates in {productname} for use with {productname}.
 
 a|
 [.lead]
