DOC-1912: advanced-template.adoc
Reversed presentation order of toolbar buttons to match presentation order of equivalent menu items.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -24,8 +24,8 @@ The Plugin’s utility is made available to end-users via two menu items:
 
 And two toolbar buttons:
 
-* `addtemplate`
-* `inserttemplate`
+* `+inserttemplate+`
+* `+addtemplate+`
 
 
 == Interactive example
