DOC-1912: available-toolbar-buttons.adoc
Added Advanced Templates section.

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -38,6 +38,12 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
+:pluginname: Advanced Templates
+:plugincode: advtemplate
+:pluginpage: advanced-templates.adoc
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
+:plugincategory: premium
 :pluginname: Advanced Typography
 :plugincode: typography
 :pluginpage: advanced-typography.adoc
