DOC-1912: advanced-templates.adoc
Removed boilerplate instructional comments.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -102,35 +102,10 @@ tinymce.init({
 ----
 
 
-
-
-
-
-
-
-// Delete everything not require/relevant from this point on.
-
-== Options
-
-The following configuration options affect the behavior of the {pluginname} plugin.
-
-////
-  There should be a template to help you create these configuration option/settings "chunks".
-  Just include as per the below example.
-////
-include::partial$configuration/<setting-name-in-hyphen-case>.adoc[]
-
-////
-  Toolbar buttons content, uses the pluginname and plugincode variables.
-  The toolbar buttons are the same as another plugin, assign the other plugin's identifier to `altplugincode`
-  Don't forget to add this to available-toolbar-buttons.md
-////
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
-////
-  Menu items content, uses the pluginname and plugincode variables.
-  The menu items are the same as another plugin, assign the other plugin's identifier to `altplugincode`
-  Don't forget to add this to available-menu-items.md
-////
+
+//include::partial$toolbar-button-ids/advanced-typography-toolbar-buttons.adoc[]
+
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 == Commands
