DOC-1912: advtemplate-cmds.adoc
Typo corrections and copy-edits in NOTE admonition.

--- a/modules/ROOT/partials/commands/advtemplate-cmds.adoc
+++ b/modules/ROOT/partials/commands/advtemplate-cmds.adoc
@@ -12,4 +12,4 @@ tinymce.activeEditor.execCommand('mceInsertTemplate');
 tinymce.activeEditor.execCommand('mceAddTemplate');
 ----
 
-NOTE: these are pure guesses. I don’t know if these commands exist, if the command names are correct if they do exist, or if the work as described. Off the top of my head, for example, I’d assume the first guessed-at command would require parameters for selecting which template to insert and the second guessed-ad command would require parameters for setting the id and category of a newly-created template.
+NOTE: These are pure guesses. I don’t know if these (or any) commands exist for this plugin; if the command names are correct if they do exist; or if they work as described. Off the top of my head, for example, I’d assume the first guessed-at command would require parameters for selecting which template to insert and the second guessed-at command would require parameters for setting the id and category of a newly-created template.
