DOC-1912: advanced-templates.adoc
Added Options section, with include pointing to `configuration/advtemplate_list.adoc`.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -91,6 +91,12 @@ tinymce.init({
 ----
 
 
+== Options
+
+The following configuration options affect the behavior of the {pluginname} plugin.
+
+include::partial$configuration/advtemplate_list.adoc[]
+
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
