DOC-1912: advtemplate_list.adoc
Removed un-necessary text.

--- a/modules/ROOT/partials/configuration/advtemplate_list.adoc
+++ b/modules/ROOT/partials/configuration/advtemplate_list.adoc
@@ -7,7 +7,7 @@ To load templates from an external source, configure the `advtemplate_list` opti
 
 *Type:* `+Object+`
 
-=== Example: using `+advtemplate_list+` to load a template collection on {productname} initialization
+=== Example: using `+advtemplate_list+` to load a template collection
 
 [source,js]
 ----
