DOC-1912: advanced-templates.adoc
Removed extranous curly brackets from around a variable.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -115,6 +115,6 @@ include::partial$events/{plugincode}-events.adoc[]
 
 == APIs
 
-The {{pluginname}} plugin provides the following APIs.
+The {pluginname} plugin provides the following APIs.
 
 include::partial$plugin-apis/{plugincode}-apis.adoc[]
