--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -74,7 +74,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * Inserting newlines inside an editable element that was inside an element with a `contenteditable="false"` attribute root would sometimes try to split the editable element.
 * Creating a list in a table cell when the caret is in front of an anchor element would not properly include the anchor in the list.
 * Dragging and dropping elements with a `contenteditable="false"` attribute on table borders would remove the element on drop.
-* elements with a `contenteditable="false"` attribute would be removed when dragged and dropped within a root element with a `contenteditable="false"` attribute.
+* Elements with a `contenteditable="false"` attribute would be removed when dragged and dropped within a root element with a `contenteditable="false"` attribute.
 * Formatting could be applied or removed to list items with a `contenteditable="false"` attribute that were inside an element with a `contenteditable="false"` attribute.
 * Annotation were not removed if the annotation was deleted immediately after being created.
 * Inserting a link for a selection from quickbars did not preserve formatting.
